Bug 926274: Allow swipe gestures to navigate history even when scrollbars are visible on OSX. r=masayuki